Text changes to name

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <img class="responsive-img" src="./src/img/loop.gif" data-aos="fade-right">
         </div>
         <div class="col s12 l7" data-aos="fade-left">
-          <h4>What is Olympia?</h4>
+          <h4>What is Librenet?</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi molestie mollis molestie. Morbi molestie mollis molestie. Sed tincidunt diam eu ante pharetra dignissim. Aenean viverra risus sed ullamcorper blandit. Integer ultricies sapien sed
             ornare ornare. Suspendisse finibus non sem vitae viverra.Morbi molestie mollis molestie. Morbi molestie mollis molestie. Sed tincidunt diam eu ante pharetra dignissim. Aenean viverra risus sed ullamcorper blandit. Integer ultricies sapien
             sed ornare ornare. Suspendisse finibus non sem vitae viverra. Morbi molestie mollis molestie.</p>
@@ -143,12 +143,12 @@
 
   <!-- Staff -->
 
-  <div class="staff" id="staff">
+  <!-- <div class="staff" id="staff">
     <div class="main">
       <div class="row">
         <div class="col s12">
-          <h4 class="center-align" style="padding-bottom: 1
-        %;">Our Staff Team</h5>
+          <h4 class="center-align" style="padding-bottom: 1%;">Our Staff Team</h4>
+        </div>
       </div>
     </div>
     <div class="row">
@@ -266,11 +266,11 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
   <!-- / Staff -->
 
   <!-- Vip -->
-  <div class="vip center-align" id="vip">
+  <!-- <div class="vip center-align" id="vip">
     <div class="main">
       <div class="row" data-aos="fade">
         <div class="col s12">
@@ -376,7 +376,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- /Vip -->
 
   <!-- Screenshots -->
