--- a/index.html
+++ b/index.html
@@ -78,6 +78,23 @@
     </div>
   </div>
 
+  <div class="about" id="about">
+    <div class="main">
+      <div class="row">
+        <div class="col s12 l5 align-center">
+          <img class="responsive-img" src="./src/img/loop.gif" data-aos="fade-right">
+        </div>
+        <div class="col s12 l7" data-aos="fade-left">
+          <h4>What is Librenet?</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi molestie mollis molestie. Morbi molestie mollis molestie. Sed tincidunt diam eu ante pharetra dignissim. Aenean viverra risus sed ullamcorper blandit. Integer ultricies sapien sed
+            ornare ornare. Suspendisse finibus non sem vitae viverra.Morbi molestie mollis molestie. Morbi molestie mollis molestie. Sed tincidunt diam eu ante pharetra dignissim. Aenean viverra risus sed ullamcorper blandit. Integer ultricies sapien
+            sed ornare ornare. Suspendisse finibus non sem vitae viverra. Morbi molestie mollis molestie.</p>
+          <p>Sed tincidunt diam eu ante pharetra dignissim. Aenean viverra risus sed ullamcorper blandit.</p>
+          <a href="https://discord.gg/7jr3x5k" class="waves-effect waves-light btn-large grey darken-4" style="margin-top: 2%;" >Discord</a>
+        </div>
+      </div>
+    </div>
+  </div>
   <!-- Info -->
 
   <div class="info center-align" data-aos="fade">
@@ -87,7 +104,7 @@
           <img class="responsive-img" src="./src/img/dirt-icon.png">
           <h4>Survival</h4>
           <i class="chip">
-          <span data-playercounter-ip="mc-central.net"></span> Players Online
+          <span data-playercounter-ip="minecraft.librenet.org"></span> Players Online
         </i>
           <p>This is placeholder text. You should replace this with your own content. Morbi molestie mollis molestie. Sed tincidunt diam eu ante pharetra dignissim. Aenean viverra risus sed ullamcorper blandit. Integer ultricies sapien sed ornare ornare.
             Suspendisse finibus non sem vitae viverra.</p>
@@ -121,23 +138,7 @@
 
   <!-- About -->
 
-  <div class="about" id="about">
-    <div class="main">
-      <div class="row">
-        <div class="col s12 l5 align-center">
-          <img class="responsive-img" src="./src/img/loop.gif" data-aos="fade-right">
-        </div>
-        <div class="col s12 l7" data-aos="fade-left">
-          <h4>What is Librenet?</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi molestie mollis molestie. Morbi molestie mollis molestie. Sed tincidunt diam eu ante pharetra dignissim. Aenean viverra risus sed ullamcorper blandit. Integer ultricies sapien sed
-            ornare ornare. Suspendisse finibus non sem vitae viverra.Morbi molestie mollis molestie. Morbi molestie mollis molestie. Sed tincidunt diam eu ante pharetra dignissim. Aenean viverra risus sed ullamcorper blandit. Integer ultricies sapien
-            sed ornare ornare. Suspendisse finibus non sem vitae viverra. Morbi molestie mollis molestie.</p>
-          <p>Sed tincidunt diam eu ante pharetra dignissim. Aenean viverra risus sed ullamcorper blandit.</p>
-          <a href="https://discord.gg/7jr3x5k" class="waves-effect waves-light btn-large grey darken-4" style="margin-top: 2%;" >Discord</a>
-        </div>
-      </div>
-    </div>
-  </div>
+
 
   <!-- / About -->
 
