--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <body>
 
   <!-- Nav -->
-  <div class="header" style="background: url('./src/img/cityscape.jpg'); background-position: 50% 10%; background-attachment: fixed;">
+  <div class="header" style="background: url('./src/img/009.png'); background-position: 50% 10%; background-attachment: fixed;">
     <div class="navbar-fixed">
       <nav class="z-depth-0">
         <div class="nav-wrapper">
@@ -74,7 +74,9 @@
     <div class="header-content center-align" data-aos="fade">
       <h1 style="padding-top: 6%;">Welcome To Librenet!</h1>
       <h5 style="margin-bottom: 10%; margin-top: 2%;">A free and open place to create and socialize.</h5>
-      <a class="waves-effect waves-light btn-large grey darken-4" style="margin-bottom: 10%; margin-top: 2%;" href="#">GitHub</a>
+      <a class="waves-effect waves-light btn-large grey darken-4" style="margin-bottom: 10%; visibility: hidden; margin-top: 2%;" href="#">
+        <!-- GitHub -->
+      </a>
     </div>
   </div>
 
@@ -108,7 +110,7 @@
         </i>
           <p>This is placeholder text. You should replace this with your own content. Morbi molestie mollis molestie. Sed tincidunt diam eu ante pharetra dignissim. Aenean viverra risus sed ullamcorper blandit. Integer ultricies sapien sed ornare ornare.
             Suspendisse finibus non sem vitae viverra.</p>
-          <a class="btn-large waves-effect waves-light grey darken-4" style="margin-bottom: 9%; margin-top: 2%;">Connect</a>
+          <a class="btn-large waves-effect waves-light grey darken-4" style="margin-bottom: 9%; margin-top: 2%;">minecraft.librenet.org</a>
         </div>
         <!-- <div class="col l4 s12">
           <img class="responsive-img" src="./src/img/stone-icon.png">
@@ -391,44 +393,44 @@
       <div class="row">
         <div class="col l3 s6">
           <div class="card-panel" style="margin: 0; padding: 0;">
-            <img class="responsive-img materialboxed" src="./src/img/cityscape.jpg">
+            <img class="responsive-img materialboxed" src="./src/img/001.png">
           </div>
         </div>
         <div class="col l3 s6">
           <div class="card-panel" style="margin: 0; padding: 0;">
-            <img class="responsive-img materialboxed" src="./src/img/cityscape.jpg">
+            <img class="responsive-img materialboxed" src="./src/img/002.png">
           </div>
         </div>
         <div class="col l3 s6">
           <div class="card-panel" style="margin: 0; padding: 0;">
-            <img class="responsive-img materialboxed" src="./src/img/cityscape.jpg">
+            <img class="responsive-img materialboxed" src="./src/img/003.png">
           </div>
         </div>
         <div class="col l3 s6">
           <div class="card-panel" style="margin: 0; padding: 0;">
-            <img class="responsive-img materialboxed" src="./src/img/cityscape.jpg">
+            <img class="responsive-img materialboxed" src="./src/img/004.png">
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col l3 s6">
           <div class="card-panel" style="margin: 0; padding: 0;">
-            <img class="responsive-img materialboxed" src="./src/img/cityscape.jpg">
+            <img class="responsive-img materialboxed" src="./src/img/005.png">
           </div>
         </div>
         <div class="col l3 s6">
           <div class="card-panel" style="margin: 0; padding: 0;">
-            <img class="responsive-img materialboxed" src="./src/img/cityscape.jpg">
+            <img class="responsive-img materialboxed" src="./src/img/006.png">
           </div>
         </div>
         <div class="col l3 s6">
           <div class="card-panel" style="margin: 0; padding: 0;">
-            <img class="responsive-img materialboxed" src="./src/img/cityscape.jpg">
+            <img class="responsive-img materialboxed" src="./src/img/008.png">
           </div>
         </div>
         <div class="col l3 s6">
           <div class="card-panel" style="margin: 0; padding: 0;">
-            <img class="responsive-img materialboxed" src="./src/img/cityscape.jpg">
+            <img class="responsive-img materialboxed" src="./src/img/009.png">
           </div>
         </div>
       </div>
@@ -437,7 +439,7 @@
   <!-- /Screenshots -->
 
   <!-- Contact -->
-  <div class="contact" id="contact" style="background: url('./src/img/cityscape.jpg'); background-position: 50% 10%; background-attachment: fixed;">
+  <div class="contact" id="contact" style="background: url('./src/img/008.png'); background-position: 50% 10%; background-attachment: fixed;">
     <div class="main">
       <div class="card-panel" data-aos="fade-up">
         <h4 class="center-align">Contact Us</h4>
