--- a/index.html
+++ b/index.html
@@ -88,10 +88,9 @@
         </div>
         <div class="col s12 l7" data-aos="fade-left">
           <h4>What is Librenet?</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi molestie mollis molestie. Morbi molestie mollis molestie. Sed tincidunt diam eu ante pharetra dignissim. Aenean viverra risus sed ullamcorper blandit. Integer ultricies sapien sed
-            ornare ornare. Suspendisse finibus non sem vitae viverra.Morbi molestie mollis molestie. Morbi molestie mollis molestie. Sed tincidunt diam eu ante pharetra dignissim. Aenean viverra risus sed ullamcorper blandit. Integer ultricies sapien
-            sed ornare ornare. Suspendisse finibus non sem vitae viverra. Morbi molestie mollis molestie.</p>
-          <p>Sed tincidunt diam eu ante pharetra dignissim. Aenean viverra risus sed ullamcorper blandit.</p>
+          <p>Librenet is a place where everyone is welcomed and encouraged to express their thoughts and creativity. Our Minecraft servers offer a safe place to create and express yourself - Please create something while you are on the server!</p>
+            <p>You may join our community in the discord server listed below.</p>
+          <p>Please use the Contact Us Form if you wish to contact the server admins</p>
           <a href="https://discord.gg/7jr3x5k" class="waves-effect waves-light btn-large grey darken-4" style="margin-top: 2%;" >Discord</a>
         </div>
       </div>
@@ -108,8 +107,7 @@
           <i class="chip">
           <span data-playercounter-ip="minecraft.librenet.org"></span> Players Online
         </i>
-          <p>This is placeholder text. You should replace this with your own content. Morbi molestie mollis molestie. Sed tincidunt diam eu ante pharetra dignissim. Aenean viverra risus sed ullamcorper blandit. Integer ultricies sapien sed ornare ornare.
-            Suspendisse finibus non sem vitae viverra.</p>
+          <p>Librenet's Survival Minecraft Server. An open world of PVE & PVP with a centraly located player village for community. Players new and experienced are welcomed to play against the enviroment while flexing their creativity.  </p>
           <a class="btn-large waves-effect waves-light grey darken-4" style="margin-bottom: 9%; margin-top: 2%;">minecraft.librenet.org</a>
         </div>
         <!-- <div class="col l4 s12">
