Update social and footer and logo drop

--- a/index.html
+++ b/index.html
@@ -49,19 +49,19 @@
     <div class="navbar-fixed">
       <nav class="z-depth-0">
         <div class="nav-wrapper">
-          <a href="#!" class="brand-logo">Logo</a>
+          <!-- <a href="#!" class="brand-logo">Logo</a> -->
           <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
           <ul class="right hide-on-med-and-down">
             <li><a href="#about">About</a></li>
-            <li><a href="#staff">Staff</a></li>
-            <li><a href="#vip">Vip</a></li>
+            <!-- <li><a href="#staff">Staff</a></li>
+            <li><a href="#vip">Vip</a></li> -->
             <li><a href="#screenshots">Screenshots</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
           <ul class="side-nav" id="mobile-demo">
             <li><a href="#about">About</a></li>
-            <li><a href="#staff">Staff</a></li>
-            <li><a href="#vip">Vip</a></li>
+            <!-- <li><a href="#staff">Staff</a></li>
+            <li><a href="#vip">Vip</a></li> -->
             <li><a href="#screenshots">Screenshots</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
@@ -474,14 +474,14 @@
 
 
   <!-- Footer -->
-  <footer class="page-footer grey darken-4 z-depth-4">
+  <!-- <footer class="page-footer grey darken-4 z-depth-4">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Footer Content</h5>
-          <p class="grey-text text-lighten-4">Sed tincidunt diam eu ante pharetra dignissim. Aenean viverra risus sed ullamcorper blandit.</p>
-        </div>
-        <div class="col l4 offset-l2 s12">
+          <h5 class="white-text">Social</h5>
+          <p class="grey-text text-lighten-4">Thank you for using Librenet!</p> -->
+        <!-- </div> -->
+        <!-- <div class="col l4 offset-l2 s12">
           <h5 class="white-text">Social Links</h5>
           <ul>
             <li><a class="grey-text text-lighten-3" href="#!">Official Twitter Feed</a></li>
@@ -490,12 +490,12 @@
           </ul>
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="footer-copyright grey darken-4 z-depth-4">
       <div class="container">
         <!-- Please give credit, where credit is due. Leave this here... -->
-        Created with care, by Sid Engel.
-        <a class="grey-text text-lighten-4 right" href="#!">©ServerName 2017</a>
+        Created with love, by Sid Engel.
+        <!-- <a class="grey-text text-lighten-4 right" href="#!">©ServerName 2017</a> -->
       </div>
     </div>
   </footer>
