commented out php form info

--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
   <!-- /Screenshots -->
 
   <!-- Contact -->
-  <div class="contact" id="contact" style="background: url('./src/img/008.png'); background-position: 50% 10%; background-attachment: fixed;">
+  <!-- <div class="contact" id="contact" style="background: url('./src/img/008.png'); background-position: 50% 10%; background-attachment: fixed;">
     <div class="main">
       <div class="card-panel" data-aos="fade-up">
         <h4 class="center-align">Contact Us</h4>
@@ -469,7 +469,7 @@
         </form>
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- /Contact -->
 
 
