--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <!-- <li><a href="#staff">Staff</a></li>
             <li><a href="#vip">Vip</a></li> -->
             <li><a href="#screenshots">Screenshots</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <!-- <li><a href="#contact">Contact</a></li> -->
           </ul>
         </div>
       </nav>
