--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <!-- <li><a href="#staff">Staff</a></li>
             <li><a href="#vip">Vip</a></li> -->
             <li><a href="#screenshots">Screenshots</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <!-- <li><a href="#contact">Contact</a></li> -->
           </ul>
           <ul class="side-nav" id="mobile-demo">
             <li><a href="#about">About</a></li>
